<resources>
    <string name="content_authority">com.android.popularmoviesapp</string>
    <string name="app_name">Popular Movies</string>


    <!--Settings -->
    <string name="action_settings">Settings</string>
    <string name="sort_list_pref_label">Sort Movies</string>
    <string name="sort_key" translatable="false">sort</string>
    <string name="sort_initial_load">firstTime</string>
    <string name="sort_default">popular</string>
    <string name="sort_most_popular_value" translatable="false">popular</string>
    <string name="sort_highest_rated_value" translatable="false">top_rated</string>
    <string name="sort_favorite_movie_value" translatable="false">favorites</string>
    <string name="sort_most_popular_label">Most Popular</string>
    <string name="sort_highest_rated_label">Highest Rated</string>
    <string name="sort_favorite_movie_label">Favorites</string>

    <!--Movie Details -->
    <string name="md_rating_label">Rating:</string>
    <string name="md_original_title_label">Title:</string>
    <string name="md_date_label">Release:</string>
    <string name="md_synopsis_label">Synopsis:</string>
    <string name="action_movie_details_label">Movie Details</string>
    <string name="No_trailer_text">No Trailer available at this time.</string>
    <string name="No_Review_Text">No Reviews Available</string>
    <string name="md_trailer_label">Trailers &amp; Clips:</string>
    <string name="md_review_label">Reviews:</string>
    <string name="md_review_read_more_url_text">Read More</string>
    <string name="favorite_movie_title">Favorite Movie</string>

    <string name="Data_is_null_adapter">MovieData object IS NULL</string>
    <string name="remove_favorite_movie">Remove Favorite Movie</string>

</resources>
